测试正常的html

--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-Hello World
+<!DOCTYPE HTML>
+<html>
+  <head>
+    <meta charset="UTF-8">    
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tools Index</title> 
+  </head>
+  <body>    
+    Hello World
+  </body>
+</html>
+
+
