--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Tools Index</title> 
   </head>
   <body>    
-    Hello World
+    已迁移到速度比较快的香港主机 <a href="http://www.iroowe.com">www.iroowe.com</a>
   </body>
 </html>
 
