--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">    
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tools Index</title> 
+    <title>温馨提示</title> 
   </head>
   <body>    
     已迁移到速度比较快的香港主机 <a href="http://www.iroowe.com">www.iroowe.com</a>
